--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 16px;
 }
 
 nav {
-  background-color: rgba(0,0,0,.5);
+  background-color:rgba(0,0,0,.5);
   float: left;
   position: fixed;
   width: 100%;
@@ -30,7 +31,15 @@ nav {
 
 .right {
   float: right;
+  text-decoration: none;
 }
+
+
+.right:link {color: blue; } /* unvisited */
+.right:visited { color:purple; } /* visited */
+.right:hover { color:pink; } /* mouse over */
+.right:active { color:red; }
+
 
 ul {
   list-style-type: none;
@@ -49,4 +58,21 @@ article {
 .container {
   margin: 0 auto;
   width: 50%;
+}
+
+.container h1 {
+  font-size: 3em;
+}
+
+.container h3 {
+  font-size: 1.25em;
+}
+
+.author {
+  font-size:1.5em;
+}
+
+.story-text p {
+  line-height: 1.75em;
+
 }
